fixed html spacing and css styles

--- a/gallery.css
+++ b/gallery.css
@@ -96,8 +96,3 @@ body {
     }
 }
 
-@media (min-width: 1001px){
-    .gallery-grid {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-}
